--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -2,3 +2,155 @@
 @import './../vendor/scss/functions';
 @import './../vendor/scss/variables';
 @import './../vendor/scss/bootstrap.scss';
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+.txt-19 {
+  font-size: 19px;
+}
+
+.txt-18 {
+  font-size: 18px;
+}
+
+.txt-17 {
+  font-size: 17px;
+}
+
+.txt-65 {
+  font-size: 65px;
+}
+
+.font-family {
+  font-family: "Poppins", sans-serif;
+}
+
+.font-family-cormorant {
+  font-family: "Cormorant", serif
+}
+
+.line {
+  background-color: #FFFFFF;
+  width: 100%;
+  height: 1px;
+}
+
+.btn {
+  --bs-border-radius: none;
+}
+
+.line-short {
+  background-color: #111;
+  width: 70px;
+  height: 2px;
+}
+
+.link-deco {
+  text-decoration: underline;
+}
+
+@media (min-width: 991.98px) {
+  .about-us .about {
+    max-width: 70%;
+  }
+
+  .about-us .about>p {
+    max-width: 80%;
+  }
+}
+
+@media (max-width: 1199.98px) {
+  .about-us .d-not {
+    display: none;
+  }
+}
+
+.courses .course>img {
+  max-width: 100%;
+  height: auto;
+}
+
+.courses .course {
+  margin-bottom: 150px;
+}
+
+.courses .course .box {
+  max-width: 85%;
+  left: 32px;
+  top: 70%;
+}
+
+.video-wrapper {
+  position: relative;
+}
+
+.overlap-card {
+  position: absolute;
+  bottom: -80px;
+  width: 75%;
+}
+
+@media (max-width: 991px) {
+  .overlap-card {
+    position: static;
+    margin-top: 20px;
+    width: 100%;
+  }
+}
+
+.testimonial-card {
+  border-radius: 0px !important;
+  min-height: 260px;
+}
+
+.testimonial-avatar {
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+
+
+@media (max-width: 992px) {
+
+  .why-choose-row {
+    flex-direction: column;
+    gap: 2rem !important;
+  }
+
+  .why-left-iframe {
+    position: relative !important;
+    height: 280px !important;
+  }
+
+  .why-left-iframe iframe {
+    position: absolute !important;
+    inset: 0;
+    width: 100% !important;
+    height: 100% !important;
+  }
+
+
+  .why-right-content {
+    margin-top: 2rem !important;
+  }
+
+  .why-bottom-row {
+    flex-direction: column !important;
+    gap: 1.5rem !important;
+  }
+
+  .why-bottom-row>div {
+    width: 100% !important;
+    margin-left: 0 !important;
+  }
+}
